manifests/alago/test/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: test
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: test
    weight: 100
  wildcardPolicy: None
