manifests/alago/test/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test
  name: test
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5005
  selector:
    app: test
  type: ClusterIP
